# api-scheduler

./: .dockerignore  DOCKER_SETUP.md  MONITORING_SETUP.md  README.md  docker-compose.yml
services/api/: .dockerignore  .env  API_Scheduler.postman_collection.json  Dockerfile  Makefile  pyproject.toml
services/api/sql/: 01_create_enums.sql  02_create_tables.sql  schema.sql
services/api/src/: main.py
services/api/src/core/: config.py  db_monitor.py  decorators.py  logging.py  metrics.py  otel.py
services/api/src/db/: database.py
services/api/src/db/mixins/: timestamp.py  uuid.py
services/api/src/db/models/: attempt.py  job.py  schedule.py  target.py  url.py
services/api/src/domains/health/: router.py  schemas.py
services/api/src/domains/jobs/: repository.py  router.py  schemas.py  service.py
services/api/src/domains/runs/: repository.py  router.py  schemas.py  service.py
services/api/src/domains/schedules/: repository.py  router.py  schemas.py  service.py
services/api/src/domains/targets/: repository.py  router.py  schemas.py  service.py
services/api/src/domains/urls/: repository.py
services/api/src/enums/: http_methods.py  job_status.py  schedule_type.py
services/api/src/middleware/: logging.py  observability.py
services/api/src/models/: attempt.py  job.py  response.py  schedule.py  target.py
services/api/src/temporal/: activities.py  client.py  worker_service.py  workflows.py
services/api/src/tests/: conftest.py
services/api/src/tests/helpers/: db_helpers.py  fixtures.py  mocks.py
services/api/src/tests/integration/: test_jobs_api.py  (+6 more)
(+48 files in other folders)
